--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				<p>The beautiful thing about learning is that nobody can take it away from you</p>
 				<h5>Education is the process of facilitating learning, or the acquisition of knowledge, skills, values, beliefs, and habits. Educational methods include teaching, training, storytelling, discussion and directed research!</h5>
 				<div class="play">
-					<img src="images/icon/play.png" alt="play"><span><a href="https://www.youtube.com/watch?v=KFyrgDO1WXk" target="_blank">Watch Now</a></span>
+					<img src="images/icon/play.png" alt="play"><span><a href="https://www.youtube.com/watch?v=sTaEwwHOzjc" target="_blank">Watch Now</a></span>
 				</div>
 			</div>
 			<div class="svg-image">
@@ -53,7 +53,7 @@
 			<div class="close" onclick="sideMenu(1)"><img src="images/icon/close.png" alt=""></div>
 			<div class="user">
 				<img src="images/creator/roshan.jpeg" alt="Username">
-				<p>roshank9419</p>
+				<p>Satyam Sajal</p>
 			</div>
 			<ul>
 				<li><a href="#about_section">About</a></li>
@@ -126,7 +126,7 @@
 <!-- SERVICES -->
 	<div class="service-swipe">
 		<div class="diffSection" id="services_section">
-		<center><p style="font-size: 50px; padding: 100px; padding-bottom: 40px; color: #fff;">Services</p></center>
+		<center><p style="font-size: 50px; padding: 100px; padding-bottom: 40px; color: black;">Services</p></center>
 		</div>
 		<a href="subjects/computer_courses.html"><div class="s-card"><img src="images/icon/computer-courses.png"><p>Free Online Computer Courses</p></div></a>
 		<a href="subjects/jee.html"><div class="s-card"><img src="images/icon/brainbooster.png"><p>Building Concepts for Competitive Exams</p></div></a>
@@ -140,7 +140,6 @@
 
 <!-- Reviews by Students -->
 <div id="makeitfull">
-	<a href="#review_section"><img src="images/icon/makeitfull.png"></a>
 </div>
 <div class="review">
 	<div class="diffSection" id="review_section">
@@ -246,16 +245,18 @@
 				<button type="submit" id="csubmit">Send Message</button>
 			</form>
 		</div>
+		<img src="./images/extra/feed.svg" alt="">
 	</div>
 
 <!-- Sliding Information -->
-	<marquee style="background: linear-gradient(to right, #FA4B37, #DF2771); margin-top: 50px;" direction="left" onmouseover="this.stop()" onmouseout="this.start()" scrollamount="20"><div class="marqu">“Education is the passport to the future, for tomorrow belongs to those who prepare for it today.” “Your attitude, not your aptitude, will determine your altitude.” “If you think education is expensive, try ignorance.” “The only person who is educated is the one who has learned how to learn …and change.”</div></marquee>
+	<marquee style="background: black; margin-top: 50px;" direction="left" onmouseover="this.stop()" onmouseout="this.start()" scrollamount="20"><div class="marqu">“Education is the passport to the future, for tomorrow belongs to those who prepare for it today.” “Your attitude, not your aptitude, will determine your altitude.” “If you think education is expensive, try ignorance.” “The only person who is educated is the one who has learned how to learn …and change.”</div></marquee>
 
 <!-- FOOTER -->
 	<footer>
 		<div class="footer-container">
 			<div class="left-col">
-				<img src="images/icon/logo - Copy.png" style="width: 200px;">
+				<h1 class="unique">Edukation</h1>
+				<!-- <img src="images/icon/logo - Copy.png" style="width: 200px;"> -->
 				<div class="logo"></div>
 				<div class="social-media">
 					<a href="#"><img src="images/icon\fb.png"></a>
@@ -264,8 +265,8 @@
 					<a href="#"><img src="images/icon\ytube.png"></a>
 					<a href="#"><img src="images/icon\linkedin.png"></a>
 				</div><br><br>
-				<p class="rights-text">Copyright © 2021 Created By Roshan Kumar, Abhishek Dulat All Rights Reserved.</p>
-				<br><p><img src="images/icon/location.png"> Lovely Professional University<br>Phagwara, Punjab-144401</p><br>
+				<p class="rights-text">Copyright © 2021 Satyam All Rights Reserved.</p>
+				<br><p><img src="images/icon/location.png"> Tezpur university<br>Phagwara, Punjab-144401</p><br>
 				<p><img src="images/icon/phone.png"> +91-1234-567-890<br><img src="images/icon/mail.png">&nbsp; learnedonline9419@gmail.com</p>
 			</div>
 			<div class="right-col">
