--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<li><a href="#contactus_section">Contact</a></li>
 			</ul>
 			<!-- <div class="srch"><input type="text" class="search" placeholder="Search here..."><img src="images/icon/search.png" alt="search" onclick=slide()></div> -->
-			<a class="get-started" href="login.html">Get Started</a>
+			<a class="get-started" href="login.html">Login</a>
 			<img src="images/icon/menu.png" class="menu" onclick="sideMenu(0)" alt="menu">
 		</nav>
 		<div class="head-container">
@@ -52,7 +52,6 @@
 		<div class="side-menu" id="side-menu">
 			<div class="close" onclick="sideMenu(1)"><img src="images/icon/close.png" alt=""></div>
 			<div class="user">
-				<img src="images/creator/roshan.jpeg" alt="Username">
 				<p>Satyam Sajal</p>
 			</div>
 			<ul>
@@ -77,13 +76,13 @@
 		<div class="det"><a href="subjects/jee.html"><img src="images/courses/book.png">JEE Preparation</a></div>
 		<div class="det"><a href="subjects/gate.html"><img src="images/courses/d1.png">GATE Preparation</a></div>
 		<div class="det"><a href="subjects/jee.html#sample_papers"><img src="images/courses/paper.png">Sample Papers</a></div>
-		<div class="det"><a href="subjects/quiz.html"><img src="images/courses/d1.png">Daily Quiz</a></div>
+		<div class="det"><a href="#"><img src="images/courses/d1.png">Daily Quiz</a></div>
 		</div></center>
 		<div class="cbox">
 		<div class="det"><a href="subjects/computer_courses.html"><img src="images/courses/computer.png">Computer Courses</a></div>
 		<div class="det"><a href="subjects/computer_courses.html#data"><img src="images/courses/data.png">Data Structures</a></div>
 		<div class="det"><a href="subjects/computer_courses.html#algo"><img src="images/courses/algo.png">Algorithm</a></div>
-		<div class="det det-last"><a href="subjects/computer_courses.html#projects"><img src="images/courses/projects.png">Projects</a></div>
+		<div class="det det-last"><a href=#><img src="images/courses/projects.png">Projects</a></div>
 		</div>
 	</div>
 
@@ -207,7 +206,7 @@
 		<div class="csec"></div>
 		<div class="back-contact">
 			<div class="cc">
-			<form action="mailto:roshank9419@gmail.com" method="post" enctype="text/plain">
+			<form action="#" method="post" enctype="text/plain">
 				<label>First Name <span class="imp">*</span></label><label style="margin-left: 185px">Last Name <span class="imp">*</span></label><br>
 				<center>
 				<input type="text" name="" style="margin-right: 10px; width: 175px" required="required"><input type="text" name="lname" style="width: 175px" required="required"><br>
@@ -265,9 +264,9 @@
 					<a href="#"><img src="images/icon\ytube.png"></a>
 					<a href="#"><img src="images/icon\linkedin.png"></a>
 				</div><br><br>
-				<p class="rights-text">Copyright © 2021 Satyam All Rights Reserved.</p>
-				<br><p><img src="images/icon/location.png"> Tezpur university<br>Phagwara, Punjab-144401</p><br>
-				<p><img src="images/icon/phone.png"> +91-1234-567-890<br><img src="images/icon/mail.png">&nbsp; learnedonline9419@gmail.com</p>
+				<p class="rights-text">Copyright © 2024 Satyam All Rights Reserved.</p>
+				<br><p><img src="images/icon/location.png"> Tezpur university<br>Assam ,Tezpur 784028</p><br>
+				<p><img src="images/icon/phone.png"> +9151866454688<br><img src="images/icon/mail.png">&nbsp; Edukation@gmail.com</p>
 			</div>
 			<div class="right-col">
 				<h1 style="color: #fff">Our Newsletter</h1>
