--- a/subjects/computer_courses.html
+++ b/subjects/computer_courses.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="shortcut icon" type="png" href="../images/icon/favicon.png">
+	<link rel="shortcut icon" type="png" href="../images/icon/Logo.png">
 	<title>Computer Science Courses on LearnEd</title>
 	<link rel="stylesheet" type="text/css" href="subjects.css">
 	<script type="text/javascript" src="../script.js"></script>
@@ -11,8 +11,8 @@
 <!-- NAVIGATION -->
 	<header>
 		<div class="nav" id="nav">
-			<div id="learned-logo">
-			<a href="../index.html"><img src="../images/icon/logo.png" style="width: 120px;"></a></div>
+			<div id="logo2">
+			<a href="../index.html"><img src="../images/icon/logo.png" style="width: 40px; height: 40px;"></a></div>
 			<div class="switch-tab" id="switch-tab" onclick="switchTAB()"><img src="../images/icon/menu.png"></div>
 			<ul id="list-switch">
 				<li><a href="jee.html"><img src="../images/courses/d1.png" class="icon">JEE</a></li>
@@ -22,9 +22,7 @@
 				<li><a href="#algo"><img src="../images/courses/algo.png" class="icon">Algorithm</a></li>
 				<li><a href="#projects"><img src="../images/courses/projects.png" class="icon">Projects</a></li>
 			</ul>
-			<div class="search" id="search-switch">
-				<input type="search" placeholder="Search" class="srch"><button id="srchbtn"><img src="../images/icon/search.png"></button>
-			</div>
+		
 		</div>
 	</header>
 	
@@ -522,51 +520,6 @@
 		<a href="https://www.youtube.com/watch?v=uDwSnnhl1Ng" target="_blank">Click Here to Watch full playlist</a>
 	</div>
 
-<!-- PROJECTS -->
-	<div class="title2" id="projects">
-		<span>Browse Projects</span>
-		<div class="shortdesc2">
-			<p>Here you can find various Projects related to Web Deveopment, AI, Java Projects, etc</p>
-		</div>
-	</div>
-	<div class="project-panel">
-		<div class="project-card">
-			<img src="../images/projects/p1.jpg">
-			<div class="info">
-				<h4>Digi Library</h4><p>Interactive Library Management Software made using JAVA & MySQL</p>
-				<div class="download"><a href="https://github.com/roshan9419" target="_blank">Download</a></div>	
-			</div>
-		</div>
-		<div class="project-card">
-			<img src="../images/projects/p2.jpg">
-			<div class="info">
-				<h4>LearnEd</h4><p>It is an Educational Website made using HTML, CSS & JavaScript</p>
-				<div class="download"><a href="https://github.com/roshan9419" target="_blank">Download</a></div>
-			</div>
-		</div>
-		<div class="project-card">
-			<img src="../images/projects/p3.jpg">
-			<div class="info">
-				<h4>Photo Gallery</h4><p>This Website helps you to manage your Personal Photos developed using HTML, CSS & JavaScript</p>
-				<div class="download"><a href="https://github.com/roshan9419" target="_blank">Download</a></div>
-			</div>
-		</div>
-		<div class="project-card">
-			<img src="../images/projects/p4.jpg">
-			<div class="info">
-				<h4>Sports Fitness</h4><p>This Website helps you in your favorite Sports made using HTML, CSS & JavaScript</p>
-				<div class="download"><a href="https://github.com/roshan9419" target="_blank">Download</a></div>
-			</div>
-		</div>
-		<div class="project-card">
-			<img src="../images/projects/p5.jpg">
-			<div class="info">
-				<h4>Smart TMS</h4><p>This Software helps you to managen the records of Challans used in Traffic Management System made using C++</p>
-				<div class="download"><a href="https://github.com/roshan9419/smart_traffic" target="_blank">Download</a></div>
-			</div>
-		</div>
-
-	</div>
 
 <br><br><br><br><br>
 
@@ -574,7 +527,7 @@
 <footer>
 	<div class="footer-container">
 		<div class="left-col">
-			<img src="../images/icon/logo - Copy.png" style="width: 200px;">
+			<img class="fotlog" src="../images/icon/Logo.png" style="width: 200px;">
 			<div class="logo"></div>
 			<div class="social-media">
 				<a href="#"><img src="../images/icon\fb.png"></a>
@@ -583,9 +536,9 @@
 				<a href="#"><img src="../images/icon\ytube.png"></a>
 				<a href="#"><img src="../images/icon\linkedin.png"></a>
 			</div><br><br>
-			<p class="rights-text">Copyright © 2021 Created By Roshan Kumar, Abhishek Dulat All Rights Reserved.</p>
-			<br><p><img src="../images/icon/location.png"> Lovely Professional University<br>Phagwara, Punjab-144401</p><br>
-			<p><img src="../images/icon/phone.png"> +91-1234-567-890<br><img src="../images/icon/mail.png">&nbsp; learnedonline9419@gmail.com</p>
+			<p class="rights-text">Copyright © 2024 Created By Satyam All Rights Reserved.</p>
+			<br><p><img src="../images/icon/location.png"> tezpur university<br>Assam , Tezpur university -784028</p><br>
+			<p><img src="../images/icon/phone.png"> +91-1234-567-890<br><img src="../images/icon/mail.png">&nbsp; Edukation@gmail.com</p>
 		</div>
 		<div class="right-col">
 			<h1 style="color: #fff">Our Newsletter</h1>
