--- a/subjects/gate.html
+++ b/subjects/gate.html
@@ -11,8 +11,8 @@
 <!-- NAVIGATION -->
 	<header>
 		<div class="nav" id="nav">
-			<div id="learned-logo">
-			<a href="../index.html"><img src="../images/icon/logo.png" style="width: 120px;"></a></div>
+			<div id="logo2">
+			<a href="../index.html"><img src="../images/icon/logo.png" style="width: 40px; height: 40px;"></a></div>
 			<div class="switch-tab" id="switch-tab" onclick="switchTAB()"><img src="../images/icon/menu.png"></div>
 			<ul id="list-switch">
 				<li><a href="jee.html"><img src="../images/courses/d1.png" class="icon">JEE</a></li>
@@ -22,9 +22,7 @@
 				<li><a href="computer_courses.html#algo"><img src="../images/courses/algo.png" class="icon">Algorithm</a></li>
 				<li><a href="computer_courses.html#projects"><img src="../images/courses/projects.png" class="icon">Projects</a></li>
 			</ul>
-			<div class="search" id="search-switch">
-				<input type="text" placeholder="Search" class="srch"><button id="srchbtn"><img src="../images/icon/search.png"></button>
-			</div>
+			
 		</div>
 	</header>
 
@@ -587,7 +585,7 @@
 <footer>
 	<div class="footer-container">
 		<div class="left-col">
-			<img src="../images/icon/logo - Copy.png" style="width: 200px;">
+			<img class="fotlog" src="../images/icon/Logo.png" >
 			<div class="logo"></div>
 			<div class="social-media">
 				<a href="#"><img src="../images/icon\fb.png"></a>
@@ -596,9 +594,9 @@
 				<a href="#"><img src="../images/icon\ytube.png"></a>
 				<a href="#"><img src="../images/icon\linkedin.png"></a>
 			</div><br><br>
-			<p class="rights-text">Copyright © 2021 Created By Roshan Kumar, Abhishek Dulat All Rights Reserved.</p>
-			<br><p><img src="../images/icon/location.png"> Lovely Professional University<br>Phagwara, Punjab-144401</p><br>
-			<p><img src="../images/icon/phone.png"> +91-1234-567-890<br><img src="../images/icon/mail.png">&nbsp; learnedonline9419@gmail.com</p>
+			<p class="rights-text">Copyright © 2024 Created By Satyam All Rights Reserved.</p>
+			<br><p><img src="../images/icon/location.png"> tezpur university<br>Assam , Tezpur university -784028</p><br>
+			<p><img src="../images/icon/phone.png"> +91-1234-567-890<br><img src="../images/icon/mail.png">&nbsp;Edukation@gmail.com</p>
 		</div>
 		<div class="right-col">
 			<h1 style="color: #fff">Our Newsletter</h1>
